fixed invite permissions dropdown z-index issue

--- a/web-frontend/modules/core/assets/scss/components/group_member.scss
+++ b/web-frontend/modules/core/assets/scss/components/group_member.scss
@@ -1,24 +1,17 @@
 .group-member {
-  position: relative;
-  z-index: 1;
   display: flex;
   align-items: center;
   margin: 12px 0;
+  background-color: $white;
+  box-shadow: 0 0 0 6px $white;
+  transition: 1s linear;
+  transition-property: box-shadow, background-color;
 
-  &::before {
-    content: '';
-    z-index: -1;
-    background-color: $color-success-100;
-    border-radius: 6px;
-    opacity: 0;
-    transition: opacity 1s linear;
-
-    @include absolute(-6px);
-  }
-
-  &.group-member--highlight::before {
-    opacity: 1;
+  &.group-member--highlight {
     transition: none;
+    background-color: $color-success-100;
+    box-shadow: 0 0 0 6px $color-success-100;
+    border-radius: 6px;
   }
 }
 
